cert/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: certbot
spec:
  containers:
    - name: certbot
      image: certbot/certbot
      command: ["/bin/sh", "-c", "sleep 3600"]
      resources:
        requests:
          memory: "256Mi"
        limits:
          memory: "512Mi"
