cert/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: huatah.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service # Update this to the name of your Service
                port:
                  number: 80
  tls:
    - hosts:
        - huatah.co
      secretName: example-com-tls # Name of the Secret created by cert-manager
